[gd_scene load_steps=6 format=3 uid="uid://kvqhapct44ox"]

[ext_resource type="Script" path="res://scenes/gameover/game_over.gd" id="1_gpn7e"]
[ext_resource type="LabelSettings" uid="uid://tf1lw0r7djfi" path="res://assets/sh_48_.tres" id="1_v2fe5"]
[ext_resource type="AudioStream" uid="uid://cjyr78bk10mk1" path="res://assets/audio/game_over.wav" id="3_qbgar"]

[sub_resource type="Animation" id="Animation_3xnvc"]
resource_name = "flash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccomo"]
_data = {
"flash": SubResource("Animation_3xnvc")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpn7e")

[node name="GoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_v2fe5")

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BACK HOME"
label_settings = ExtResource("1_v2fe5")

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qbgar")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccomo")
}
autoplay = "flash"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
